--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,11 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.6
 
       - name: Terraform Init
         run: terraform init
@@ -24,4 +26,5 @@ jobs:
 
       - name: Terraform Plan
         run: terraform plan
+
 
