--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           terraform_version: 1.6.6
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+
       - name: Terraform Init
         run: terraform init
 
@@ -26,5 +33,6 @@ jobs:
 
       - name: Terraform Plan
         run: terraform plan
+
 
 
