--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,6 +46,9 @@ jobs:
 
       - name: Terraform Plan
         run: terraform plan
+      
+      - name: Terraform Apply
+  run: terraform apply -auto-approve
 
 
 
